--- a/JFTD-109-MLOps_in_Action/lab1/llm_finetuning_devops.ipynb
+++ b/JFTD-109-MLOps_in_Action/lab1/llm_finetuning_devops.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n"
+    "tokenizer = AutoTokenizer.from_pretrained(model_id, trust_remote_code=True)\n"
    ]
   },
   {
@@ -266,22 +266,22 @@
    "outputs": [],
    "source": [
     "# REPLACE WITH YOUR OWN FILESYSTEM BASE PATH WHERE THE PROJECTS RESIDE\n",
-    "base_projects_directory = \"/root/jfrog\"  # change it to your own projects path where the examples repo was cloned to\n",
-    "\n",
+    "base_projects_directory = \".\"  # change it to your own projects path where the examples repo was cloned to\n",
+    "print(base_projects_directory)\n",
     "try:\n",
     "    import frogml\n",
     "\n",
     "    frogml.huggingface.log_model(   \n",
-    "    model= finetuned_model,\n",
+    "        model= finetuned_model,\n",
     "        tokenizer= tokenizer,\n",
     "        repository=\"llm\",    # The JFrog repository to upload the model to.\n",
     "        model_name=\"devops_helper\",     # The uploaded model name\n",
-    "        version=\"\",     # Optional. The uploaded model version\n",
+    "        version=\"0.3\",     # Optional. The uploaded model version\n",
     "        parameters={\"finetuning-dataset\": dataset_name},\n",
-    "        code_dir=f\"{base_projects_directory}/qwak-examples/devops_helper/code_dir\",\n",
-    "        dependencies=[f\"{base_projects_directory}/qwak-examples/devops_helper/main/conda.yaml\"],\n",
+    "        code_dir=\"./main\",\n",
+    "        dependencies=[\"main/conda.yaml\"],\n",
     "        metrics = metrics,\n",
-    "        predict_file=f\"{base_projects_directory}/qwak-examples/devops_helper/code_dir/predict.py\"\n",
+    "        predict_file=\"./main/code_dir/predict.py\"\n",
     "        )\n",
     "    print(\"--- Model Logged Successfully ---\")\n",
     "except Exception as e:\n",
@@ -291,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10.17",
+   "display_name": "3.11.11",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
